--- a/src/app/core/layout/header/header.component.html
+++ b/src/app/core/layout/header/header.component.html
@@ -3,7 +3,7 @@
 display: flex; justify-content: space-evenly">
   <img src="assets/logo.svg" height="30" width="115" alt="logo"/>
   <input type="text" id="search" >
-  <button>ثبت نام</button>
+  <button>ثبت نام2</button>
   <p>taqirat</p>
   <p>taqirat</p>
 
